--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,14 @@
 @charset "utf-8";
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@font-face {
+    font-family: 'InkLipquid';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/InkLipquid.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+.notosanskr * { 
+ font-family: 'Noto Sans KR', sans-serif;
+}
 
 * {margin: 0; padding: 0;}
 li {list-style: none;}
@@ -10,6 +20,7 @@ a {
 html, body {
     color: #333;
     min-width: 1280px; /* 모바일화면 중심축 */
+    font-family: 'Noto Sans KR';
 }
 
 /* header */
@@ -47,7 +58,9 @@ header div h1 a {
     text-align: center;
 }
 .main_visual div h2 {
-    font-size: 80px;
+    color: rgb(255, 210, 8);
+    font-size: 120px;
+    font-family: 'InkLipquid';
 }
 .main_visual div p {
     font-size: 40px;
@@ -118,6 +131,12 @@ header div h1 a {
 .best .best_box .info ul li:first-of-type {
     background-color: rgb(255, 210, 8);
     border-radius: 5px;
+    transition: 0.8s;
+}
+.best .best_box .info ul li:first-of-type:hover {
+    box-shadow: 1px 3px 20px rgba(255, 210, 8, 0.562);
+    border: 1px solid #fff;
+    transition: 0.8s;
 }
 .best .best_box .info ul li:nth-of-type(2) {
     border-radius: 5px;
@@ -157,6 +176,7 @@ header div h1 a {
     margin-bottom: 30px;
 }
 .youtube_wrap .youtube_menu li {
+    font-weight: bold;
     height: 45px;
     line-height: 45px;
     padding: 0 30px;
@@ -303,6 +323,13 @@ footer ul li {
 }
 footer ul li:first-of-type {
     background-color: #fff;
+    transition: 0.8s;
+}
+footer ul li:first-of-type:hover {
+    background-color: rgb(255, 210, 8);
+    border: 1px solid rgb(255, 255, 255);
+    box-shadow: 2px 3px 20px rgba(255, 210, 8, 0.295);
+    transition: 0.8s;
 }
 footer ul li:first-of-type a {
     color: #333;
