--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,13 @@
 @charset "utf-8";
-@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
-@font-face {
-    font-family: 'InkLipquid';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/InkLipquid.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-.notosanskr * { 
- font-family: 'Noto Sans KR', sans-serif;
-}
 
-* {margin: 0; padding: 0;}
-li {list-style: none;}
+/* 공통 */
+* {
+    margin: 0;
+    padding: 0;
+}
+li {
+    list-style: none;
+}
 a {
     text-decoration: none;
     display: block;
@@ -19,11 +15,11 @@ a {
 }
 html, body {
     color: #333;
-    min-width: 1280px; /* 모바일화면 중심축 */
-    font-family: 'Noto Sans KR';
+    min-width: 1280px; 
 }
 
-/* header */
+
+/* header 헤더 */
 header {
     height: 80px;
     line-height: 80px;
@@ -37,22 +33,20 @@ header div {
     justify-content: space-between;
 }
 header div h1 a {
-    letter-spacing: 1px;
-    font-family: 'InkLipquid';
-    color: #333;
     position: absolute;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
 }
+
+
 /* main_visual 메인비주얼 */
 .main_visual {
     width: 100%;
     height: 800px;
-    background: url('../images/main_visual.jpg') center center / cover no-repeat;
-    background-attachment: fixed; /* 이미지고정후 스크롤 */
+    background: url('../images/visual1-3.jpg') center center / cover no-repeat; 
+    background-attachment: fixed; /* 불필요시 제거 */
     color: #fff;
-    /* 텍스트 수직 수평 가운데 정렬가능 */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -61,16 +55,14 @@ header div h1 a {
     text-align: center;
 }
 .main_visual div h2 {
-    letter-spacing: 3px;
-    color: rgb(243, 198, 0);
-    font-size: 150px;
-    font-family: 'InkLipquid';
+    font-size: 80px;
 }
 .main_visual div p {
     font-size: 40px;
     margin-top: 30px;
-    color: rgba(51, 51, 51, 0.329);
+    color: rgba(255, 255, 255, 0.7);
 }
+
 
 /* best portfolio 베스트 포트폴리오 */
 .best {
@@ -84,7 +76,7 @@ header div h1 a {
     margin-bottom: 40px;
 }
 .best .bg {
-    background-color: rgba(245, 235, 209, 0.315);
+    background-color: #eee;
     padding: 100px 0;
 }
 .best .bg .best_box {
@@ -110,8 +102,9 @@ header div h1 a {
 .best .best_box .info .text {
     margin-top: 20px;
     margin-bottom: 40px;
-    line-height: 1.5; /* 16 x 1.5 => 24 */
-}.best .best_box .info dl {
+    line-height: 1.5; /* 16(폰트사이즈) x 1.5(배수) => 24(행간) */
+}
+.best .best_box .info dl {
     display: flex;
     margin-bottom: 10px;
 }
@@ -126,29 +119,18 @@ header div h1 a {
 .best .best_box .info ul li {
     height: 45px;
     line-height: 45px;
-    border: 1px solid #ccc;
+    border: 1px solid #333;
     margin-right: 10px;
 }
 .best .best_box .info ul li a {
     padding: 0 25px;
 }
 .best .best_box .info ul li:first-of-type {
-    
-    border: 2px solid rgb(255, 210, 8);
-    border-radius: 5px;
-    transition: 0.8s;
-}
-.best .best_box .info ul li:first-of-type:hover {
-    background-color: rgb(255, 210, 8);
-    box-shadow: 1px 3px 20px rgba(255, 210, 8, 0.562);
-    transition: 0.8s;
-}
-.best .best_box .info ul li:nth-of-type(2) {
-    border-radius: 5px;
+    background: rgb(117,28,162);
+    background: linear-gradient(90deg, rgba(117,28,162,1) 0%, rgba(75,161,148,1) 36%, rgba(255,113,113,1) 70%, rgba(222,158,158,1) 100%);
 }
 .best .best_box .info ul li:first-of-type a {
-    color: #333;
-    font-weight: bold;
+    color: #fff;
 }
 .best .best_box .youtube_list {
     width: 55%;
@@ -166,11 +148,14 @@ header div h1 a {
     left: 0;
 }
 .best .best_box .web_design {
-    width: 50%;
+    width: 55%;
 }
 .best .best_box .web_design figure img {
     width: 100%;
 }
+
+
+
 /* 카테고리별 유튜브 적용 */
 .youtube_wrap {
     margin: 150px 0;
@@ -181,39 +166,38 @@ header div h1 a {
     margin-bottom: 30px;
 }
 .youtube_wrap .youtube_menu li {
-    font-weight: bold;
     height: 45px;
     line-height: 45px;
     padding: 0 30px;
     border: 1px solid #ccc;
-    box-sizing: border-box;
     margin: 0 5px;
-    border-radius: 5px;
 }
 .youtube_wrap .youtube_menu li.on {
-    background-color: rgb(255, 210, 8);
-    box-shadow: 2px 3px 15px rgba(58, 53, 31, 0.219);
-    border-radius: 5px;
+    background-color: rgb(51, 51, 51);
+    box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.322);
 }
 .youtube_wrap .youtube_menu li.on a {
-    color: #333;
+    color: #fff;
 }
 
+/* ★-on - display:none */
 .youtube_wrap .youtube_cont .menu_cont {
     width: 1280px;
     margin: 0 auto;
-    display: flex; /* 가로 나열 */
+    display: flex;
     justify-content: space-between;
-    flex-wrap: wrap; /* 자동으로 수직(아래)으로 떨어지게 만들어줌 */
+    flex-wrap: wrap;
+    /* display:flex를 했을 경우 자식태그까지 계속 flex 설정되지 않도록 추가할 수 있는 선택자 */
     display: none;
 }
+/* ★-on - display:flex 클릭했을때 뜨도록*/
 .youtube_wrap .youtube_cont .menu_cont.on {
     display: flex;
+    /* display:block으로 만들경우 연결된게 풀려서 내려감 */
 }
 .youtube_wrap .menu_cont .box {
     width: 49%;
     border: 1px solid #ccc;
-    box-sizing: border-box;
     margin-bottom: 30px;
 }
 .youtube_list {
@@ -246,12 +230,10 @@ header div h1 a {
     width: 20%;
     font-weight: bold;
 }
-/* .info dl dd a 한테 글자 굵게
-.info dl dd 마우스 올렸을 때 a 한테 밑줄 => text-decoration: underline; */
 .info dl dd a {
     font-weight: bold;
 }
-.info dl dd:hover a {
+.info dl dd:hover a{
     text-decoration: underline;
 }
 h3 {
@@ -259,9 +241,11 @@ h3 {
     text-align: center;
     margin-bottom: 40px;
 }
-/* 2D 디자인 */
+
+
+/* g_design 2D 디자인 */
 .g_design {
-    background-color: rgb(255, 227, 137);
+    background-color: #eee;
     padding: 150px 0;
 }
 .g_design em {
@@ -275,29 +259,27 @@ h3 {
     width: 1280px;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap; /* 영역을 벗어난 자식태그들을 아래로 떨어트림 */
     justify-content: space-between;
-    flex-wrap: wrap; /* 4개이상의 파일생성 시 자동으로 아래로 떨어지는 태그 */
 }
 .g_design .img_list div {
     width: 24%;
-    border-radius: 30px 30px 0 30px;
-    overflow: hidden;
+    transition: 0.2s;
 }
 .g_design .img_list div figure {
     width: 100%;
     height: 350px;
-    overflow: hidden; /* transform: scale 적용 후 영역안에서만 확대 */
+    overflow: hidden;
 }
-.g_design .img_list div figure img { /* 박스안에 이미지 넣기 */
-    transition: 0.8s; /* 확대되는 시간설정 */
+.g_design .img_list div figure img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: 0.8s;
 }
 .g_design .img_list div ul {
     background-color: #fff;
     padding: 20px;
-
 }
 .g_design .img_list div ul li:first-of-type {
     font-size: 20px;
@@ -305,30 +287,22 @@ h3 {
     margin-bottom: 7px;
 }
 .g_design .img_list div:hover {
-    box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.2)
+    box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.3);   
 }
 .g_design .img_list div:hover figure img {
-    transform: scale(1.2);
-}
-.g_design .img_list div:hover {
-    box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.2)
+    transform: scale(1.2); 
 }
 
-/* 푸터 footer */
+
+
+/* footer 푸터 */
 footer {
     background-color: #333;
     color: #fff;
     padding: 100px 0;
     text-align: center;
 }
-footer h3 {
-    font-family: 'InkLipquid';
-    font-size: 80px;
-    color: #fff;
-}
-footer a {
-    color: #fff;
-}
+
 footer ul li {
     width: 220px;
     height: 50px;
@@ -337,22 +311,132 @@ footer ul li {
     margin: 10px auto;
     border-radius: 50px;
 }
+footer ul li a {
+    color: #fff;
+}
 footer ul li:first-of-type {
     background-color: #fff;
-    transition: 0.8s;
-}
-footer ul li:first-of-type:hover {
-    background-color: rgb(255, 210, 8);
-    border: 1px solid rgb(255, 255, 255);
-    box-shadow: 2px 3px 20px rgba(255, 210, 8, 0.295);
-    transition: 0.8s;
 }
 footer ul li:first-of-type a {
     color: #333;
     font-weight: bold;
 }
 footer p {
-font-size: 14px;
-color: rgba(255, 255, 255, 0.5);
-margin-top: 20px;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.5);
+    margin-top: 20px;
+}
+
+
+
+/* 웹&앱 디자인 .web_design */
+.web_wrap { 
+    /* background-color: #ccc; */
+    /* color: #fff; */
+    margin: 150px 0;
+}
+.web_wrap .web_box {
+    width: 1280px; 
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.web_wrap .web_box .web {
+    width: 32%;
+    margin-bottom: 50px;
+}
+.web_wrap .web_box .web figure { 
+    height: 350px;
+
+}
+.web_wrap .web figure img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.web_wrap .web_box .info {  
+    padding-top: 20px;
+} 
+
+
+
+/* .info 공통스타일 */
+.info .text {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    line-height: 1.5;
+}
+.info ul {display: flex; margin-top: 30px;}
+.info ul li:first-of-type {
+    /* background-color: #333; */
+    background: rgb(254,131,53);
+    background: linear-gradient(90deg, rgba(254,131,53,1) 0%, rgba(241,31,16,1) 100%);
+    border: 1px solid rgb(254,131,53);
+}
+
+.info ul li {
+    height: 45px;
+    line-height: 45px;
+    border: 1px solid #333;
+    margin-right: 10px;
+    box-sizing: border-box;
+}
+.info ul li a {
+    padding: 0 20px;
+}
+.info ul li:first-of-type a {
+    color: #fff;
+}
+
+
+
+/* 개인정보 .about */
+.about {
+    margin: 150px 0;
+}
+.about .about_box {
+    width: 1280px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.about .about_box figure {
+    width: 30%;
+    height: 500px;
+}
+.about .about_box figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about .about_box .about_info {
+    width: 60%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.about .about_box .about_info > div {
+    width: 45%;
+    margin: 20px 0;
+    line-height: 1.5;
+}
+.about h4 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.about p {
+    /* margin-bottom: 5px; */
+    font-size: 20px;
+}
+.about dl {
+    font-size: 20px;
+}
+.about dl dt {
+    margin-bottom: 5px;
+    font-weight: bold;
 }
